<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_iinclude"/>
<!--
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/logo"
                    android:layout_toRightOf="@id/logo"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="5dp"
                    android:padding="4dp"
                    android:gravity="center"
                    android:text="@string/nutcracker"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
-->


        <RelativeLayout
            android:id="@+id/RR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textShr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:text="@string/Shared_Videos"/>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textShr"
                android:layout_margin="10dp"
                android:text="@string/fast_easy"
                android:textColor="#FFFF"
                android:background="@drawable/custom_button2"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RR1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/RR">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@null"
                android:text="@string/Start_upload"
                android:textColor="#090909"
                android:background="@drawable/custom_button"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/btn1"
                android:text="@string/upload_tele"
                android:textColor="#FFFF"
                android:background="@drawable/custom_button3"/>

    </RelativeLayout>




</LinearLayout>
