<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/gray"

    android:layout_height="match_parent"
    tools:context=".UploadActivity">



    <include layout="@layout/toolbar_iinclude"/>

    <RelativeLayout
        android:id="@+id/RR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textupload_vdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/upload_img"/>

        <TextView
            android:id="@+id/textchoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textupload_vdo"
            android:textSize="40sp"
            android:textStyle="normal"
            android:layout_margin="12dp"
            android:gravity="left"
            android:textColor="@color/white"
            android:text="@string/Choose_img"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"

            android:src="@mipmap/ic_launcher_round"
            android:layout_below="@+id/textchoose"
            android:id="@+id/img"/>

        <RelativeLayout
            android:id="@+id/RR1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img">




            <Button
                android:id="@+id/btnSelectimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Image"
                android:background="@drawable/custom_button_background"
                android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toEndOf="@id/btnSelectimg"
                android:text="@string/upload_tele"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:padding="8dp"/>

        </RelativeLayout>




        <Button

            android:id="@+id/btnUploadimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload "
            android:background="@drawable/custom_button"

            android:layout_below="@id/RR1"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

    </LinearLayout>